<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:orientation="vertical"
    tools:context=".ui.picnic.chart.ChartActivity"
    tools:ignore="Overdraw">

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barChart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="100dp" />

    <TextView
        android:id="@+id/maxMonthTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"
        android:textColor="@color/black"
        tools:text="@string/max_month"/>
    <TextView
        android:id="@+id/maxPriceTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:textColor="@color/black"
        tools:text="@string/max_price"/>

    <TextView
        android:id="@+id/minMonthTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        android:textColor="@color/black"
        tools:text="@string/min_month"/>
    <TextView
        android:id="@+id/minPriceTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:textColor="@color/black"
        tools:text="@string/min_price"/>
</LinearLayout>