<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    app:cardCornerRadius="16dp"
    tools:layout_height="150dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/martInfo"
            android:layout_width="wrap_content"
            android:minWidth="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="10sp"
            android:backgroundTint="@color/dark_blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/moveIcon"
            android:text="@string/mart_info"/>

        <Button
            android:id="@+id/moveIcon"
            android:layout_width="wrap_content"
            android:minWidth="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="10sp"
            android:backgroundTint="@color/dark_blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/move"/>

        <TextView
            android:id="@+id/storeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/martInfo"
            app:layout_constraintTop_toBottomOf="@id/menuTextView"
            tools:text="@string/sample_store_text" />

        <TextView
            android:id="@+id/menuTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:maxLines="1"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/storeTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/addressTextview"
            tools:text="@string/sample_menu" />

        <TextView
            android:id="@+id/addressTextview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:maxLines="1"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/menuTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="@string/sample_address" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>