<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/recipeMainImage"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            app:civ_border_overlay="true"
            app:civ_border_width="5dp"
            app:civ_border_color="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@color/light_blue" />

        <TextView
            android:id="@+id/recipeMenuName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingVertical="20dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@color/dark_blue_FF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipeMainImage"
            tools:text="@string/recipe_menu" />

        <TextView
            android:id="@+id/cookingMethodText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/recipeMenuName"
            app:layout_constraintStart_toEndOf="@+id/recipeMenuName"
            tools:text="@string/cooking_method_text" />

        <TextView
            android:id="@+id/cookingMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/cookingMethodText"
            app:layout_constraintStart_toEndOf="@+id/cookingMethodText"
            tools:text="@string/cooking_method" />


        <androidx.cardview.widget.CardView
            android:id="@+id/recipeMaterialNameCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/dark_blue_FF"
            app:layout_constraintTop_toBottomOf="@id/recipeMenuName">
        <TextView
            android:id="@+id/recipeMaterialName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="12sp"
            tools:text="@string/recipe_material_name" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/guideText1card"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/recipeMaterialNameCard">
        <TextView
            android:id="@+id/guideText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginVertical="10dp"
            tools:text="@string/guide_text1" />

        </androidx.cardview.widget.CardView>
        <ImageView
            android:id="@+id/guideImage1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:minHeight="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideText1card"
            app:layout_constraintWidth_percent="0.7"
            tools:background="@color/light_blue" />

        <androidx.cardview.widget.CardView
            android:id="@+id/guideText2card"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/guideImage1">
        <TextView
            android:id="@+id/guideText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/guide_text2" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/guideImage2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:minHeight="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideText2card"
            app:layout_constraintWidth_percent="0.7"
            tools:background="@color/light_blue" />

        <androidx.cardview.widget.CardView
            android:id="@+id/guideText3card"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/guideImage2">
        <TextView
            android:id="@+id/guideText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideImage2"
            tools:text="@string/guide_text3" />

        </androidx.cardview.widget.CardView>
        <ImageView
            android:id="@+id/guideImage3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:minHeight="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideText3card"
            app:layout_constraintWidth_percent="0.7"
            tools:background="@color/light_blue" />


        <androidx.cardview.widget.CardView
            android:id="@+id/guideText4card"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/guideImage3">
        <TextView
            android:id="@+id/guideText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideImage3"
            tools:text="@string/guide_text4" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/guideImage4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:minHeight="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideText4card"
            app:layout_constraintWidth_percent="0.7"
            tools:background="@color/light_blue" />

        <TextView
            android:id="@+id/tagText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            tools:text="@string/tag_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideImage4" />

        <TextView
            android:id="@+id/tagTextValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tagText"
            tools:text="@string/tag_text_value" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>