<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></RelativeLayout>

    <View
        android:id="@+id/mapOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="invisible" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/picnicChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="30dp"
        app:checkedChip="@id/restaurantChip"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/restaurantChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:checkable="true"
            android:checked="true"
            android:text="@string/restaurant"
            android:textAlignment="center"
            app:chipBackgroundColor="@drawable/bg_chip_background" />

        <com.google.android.material.chip.Chip
            android:id="@+id/martChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/mart"
            android:textAlignment="center"
            app:chipBackgroundColor="@drawable/bg_chip_background" />
    </com.google.android.material.chip.ChipGroup>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/locationSpinner"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_gravity="center|top"
        android:layout_marginTop="90dp"
        android:background="@drawable/bg_spinner_location"
        app:iconStartPadding="10dp"
        app:textEndPadding="10dp" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/storeViewPager"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        tools:background="@color/dark_blue" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/martViewPager"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:background="@color/dark_blue" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:elevation="32dp"
        android:indeterminateTint="@color/black"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="20dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/myLocationFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:backgroundTint="@color/light_green"
            android:src="@drawable/my_location_icon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/expiryDateFab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginBottom="16dp"
                android:background="@color/light_green"
                android:contentDescription="@string/app_name"
                android:padding="4dp"
                android:src="@drawable/pricelist"
                android:visibility="gone"
                app:backgroundTint="@color/light_green"
                tools:visibility="visible" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/settingFab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginBottom="16dp"
                android:background="@color/light_green"
                android:contentDescription="@string/app_name"
                android:padding="4dp"
                android:src="@drawable/settings"
                android:visibility="gone"
                app:backgroundTint="@color/light_green"
                tools:visibility="visible" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/moreFab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/light_green"
                android:contentDescription="@string/app_name"
                android:padding="4dp"
                android:src="@drawable/more_icon"
                app:backgroundTint="@color/light_green" />
        </LinearLayout>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>